рефакторинг, трассировка, обёртки для ошибок